--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
     "cssnano": "^6.0.0",
-    "d3": "^7.6.1",
     "d3-queue": "^3.0.7",
     "diff": "^5.1.0",
     "ejs": "^3.1.8",
@@ -118,12 +117,9 @@
     "build-style-spec": "cd src/style-spec && npm run build && cd ../.. && mkdir -p dist/style-spec && cp src/style-spec/dist/* dist/style-spec",
     "watch-css": "postcss --watch -o dist/mapbox-gl.css src/css/mapbox-gl.css",
     "build-token": "node build/generate-access-token-script.js",
-    "build-benchmarks": "BENCHMARK_VERSION=${BENCHMARK_VERSION:-\"$(git rev-parse --abbrev-ref HEAD) $(git rev-parse --short=7 HEAD)\"} rollup -c bench/versions/rollup_config_benchmarks.js",
-    "watch-benchmarks": "BENCHMARK_VERSION=${BENCHMARK_VERSION:-\"$(git rev-parse --abbrev-ref HEAD) $(git rev-parse --short=7 HEAD)\"} rollup -c bench/rollup_config_benchmarks.js -w",
     "start-server": "st --no-cache -H 0.0.0.0 --port 9966 --index index.html .",
-    "start": "run-p build-token watch-css watch-dev watch-benchmarks start-server",
+    "start": "run-p build-token watch-css watch-dev start-server",
     "start-debug": "run-p build-token watch-css watch-dev start-server",
-    "start-bench": "run-p build-token watch-benchmarks start-server",
     "start-release": "run-s build-token build-prod-min build-css print-release-url start-server",
     "lint": "eslint --cache --ignore-path .gitignore src test bench 3d-style debug/*.html",
     "lint-css": "stylelint 'src/css/mapbox-gl.css'",
