Downgrade rollup to fix CodeBuild

--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "pretty-bytes": "^6.0.0",
     "puppeteer-core": "^21.5.0",
     "qrcode-terminal": "^0.12.0",
-    "rollup": "^4.3.0",
+    "rollup": "3.29.4",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-unassert": "^0.6.0",
     "selenium-webdriver": "^4.15.0",
