--- a/.eslintrc
+++ b/.eslintrc
@@ -27,9 +27,6 @@
     "no-duplicate-imports": "off",
     "import/no-duplicates": "error",
 
-    // prevent issues with esbuild/vite https://github.com/mapbox/mapbox-gl-js/issues/12656
-    "no-restricted-syntax": ["error", "ClassProperty[value]"],
-
     // ensure compatibility with Node's native ESM
     "import/extensions": ["error", {
       "js": "always",
@@ -175,6 +172,38 @@
         "jsdoc/require-property-name": "error",
         "jsdoc/require-property-type": "error",
         "jsdoc/require-returns-type": "error",
+      }
+    },
+    {
+      "files": [
+        "src/**/*",
+        "3d-style/**/*"
+      ],
+      "rules": {
+        "no-restricted-syntax": [
+          "error",
+          {
+            "selector": "AwaitExpression",
+            "message": "Async/await syntax is not allowed."
+          },
+          {
+            "selector": "FunctionDeclaration[async=true]",
+            "message": "Async function declarations are not allowed."
+          },
+          {
+            "selector": "FunctionExpression[async=true]",
+            "message": "Async function expressions are not allowed."
+          },
+          {
+            "selector": "ArrowFunctionExpression[async=true]",
+            "message": "Async arrow functions are not allowed."
+          },
+          // prevent issues with esbuild/vite https://github.com/mapbox/mapbox-gl-js/issues/12656
+          {
+            "selector": "ClassProperty[value]",
+            "message": "ClassProperty values are not allowed."
+          }
+        ]
       }
     }
   ],
