--- a/src/style-spec/package.json
+++ b/src/style-spec/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mapbox/mapbox-gl-style-spec",
   "description": "a specification for mapbox gl styles",
-  "version": "14.0.0",
+  "version": "14.1.0-alpha.1",
   "author": "Mapbox",
   "keywords": [
     "mapbox",
